more spacing and media query fixes

--- a/css/styles.css
+++ b/css/styles.css
@@ -400,6 +400,8 @@ aside {
 
 .contactMeContainer {
 	padding: 0 50px 0 50px;
+	margin-bottom: 25px;
+	border-bottom: 2px dotted #A9A9A9;
 }
 
 .aboutInsideSpacer {
@@ -455,7 +457,7 @@ aside {
 .contactEmailText {
 	text-align: center;
 	font-size: 20px;
-	margin-top: 20px 0 0 0;
+	margin: 20px 0 50px; 0;
 	padding: 0;
 }
 
